--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -20,6 +20,7 @@
 .contents button {
     width: fit-content;
     font-size: 1.5rem;
+    border-radius: var(--button-border)
 }
 
 .contents .brand-description {
