--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,4 +1,4 @@
-.home-page + footer, .login-page + footer{
+.home-page + footer, .login-page + footer, .dashboard + footer{
     position: fixed;
     bottom:0;
     left: 0;
@@ -10,9 +10,8 @@ footer p{
 }
 
 footer {
-    margin: 0 2rem;
     padding: 2rem;
-    border-top: 1px solid var(--color-light-gray);
+    border-top: 1px solid var(--color-black);
     backdrop-filter: blur(10px);
 }
 
