--- a/public/main.css
+++ b/public/main.css
@@ -11,10 +11,10 @@ body {
 
 :root {
     /* colors */
-    --color-light-gray: grey;
+    --color-light-gray: #808080;
     --color-faint-blue : #10224b0a;
     --color-dark-blue : #00195224;
-    --color-black: black;
+    --color-black: #000000;
     --color-solid-blue: #bac0d0b7;
     --color-pastel-teal: #5E9697e3;
     --color-pastel-yellow:#f0bc69e3;
