--- a/src/Components/NewNoteEditor/NewNoteEditor.css
+++ b/src/Components/NewNoteEditor/NewNoteEditor.css
@@ -1,9 +1,6 @@
 .note-content-form {
     position: fixed;
-    left: 0;
-    right:0;
-    top:0;
-    bottom: 0;
+    inset: 0;
     backdrop-filter: blur(5px);
 }
 
