--- a/src/Components/NoteCard/NoteCard.css
+++ b/src/Components/NoteCard/NoteCard.css
@@ -1,5 +1,6 @@
 .note {
     width: clamp(23rem, 25rem, 28rem);
+    height: 327px;
     padding: 1rem;
     border-radius: var(--container-border);
     position: relative;
@@ -50,7 +51,7 @@
 }
 
 .note .action-box .icons{
-    font-size: 1.5rem;
+    font-size: 1.7rem;
 }
 
 @media (max-width: 700px) {
