--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -1,30 +1,16 @@
-/* @keyframes move-right {
-    0% {
-        transform: translate(-10rem, 0);
-    }
-
-    100% {
-        transform: translate(100%, 0);
-    }
-} */
-
-/* @keyframes move-left {
-    0% {
-        transform: translate(120%, 40rem);
-    }
-
-    100% {
-        transform: translate(-4rem, 40rem)
-    }
-} */
-
 .dashboard {
     display: grid;
     grid-template-columns: 1fr 5fr;
     position: relative;
 }
 
-.main-container {
+.heading {
+    margin: 2rem;
+
+}
+
+.notes-container {
+    margin: auto 0;
    display: grid;
    grid-template-columns: repeat(auto-fill, 28rem);
    align-items: center;
