--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,4 +1,5 @@
-.home-page + footer, .login-page + footer, .dashboard + footer{
+.home-page ~ footer, .login-page ~ footer, .dashboard ~ footer, .archives-dashboard ~ footer,
+.trash-dashboard ~ footer{
     position: fixed;
     bottom:0;
     left: 0;
@@ -27,7 +28,7 @@ footer {
 }
 
 @media (max-width: 1000px) {
-    .home-page + footer , .login-page + footer{
+    .home-page ~ footer , .login-page ~ footer{
         position: static;
     }
 }
