--- a/src/pages/LoginPage/LoginPage.css
+++ b/src/pages/LoginPage/LoginPage.css
@@ -1,18 +1,28 @@
-.image-container img{
-    width: 70%
-}
-
 .image-container {
-    align-self: flex-start;
+    width:45%;
+    margin:0;
 }
 
+.login-page .image-container img{
+    width:70%;
+}
 
-form {
+.login-page {
+    margin:0 3%;
+}
+
+.form-container {
+    width:40%;
+}
+
+.login-page form {
     width: clamp(20rem, 30rem, 35rem);
     padding: 1rem;
-    box-shadow: var(--mild-box-shadow);
     border-radius: var(--container-border);
-    margin: 3% 0;
+}
+
+.login-page form input {
+    padding: 14px 4px;
 }
 
 .form-heading {
@@ -40,12 +50,17 @@ form li{
     margin: 1rem 0;
 }
 
+form .input-icon-container {
+    border: none;
+    padding:0 1rem;
+}
+
 .save-my-info {
     gap: 8px;
 }
 
 .actions {
-    padding: 8px;
+    padding: 12px;
 }
 
 .actions span p,
@@ -62,9 +77,8 @@ form li{
     font-size: 1.3rem;
 }
 
-button {
-    border-radius: 0;
-    box-shadow: var(--shadow-mild);
+.login-page button {
+    border-radius: var(--container-border);
 }
 
 .action-btn button {
@@ -104,8 +118,4 @@ button {
 
 .icon-with-text p:hover {
     border-bottom: 1px solid;
-}
-
-.login-page {
-    gap: 5%;
 }
