--- a/src/pages/LandingPage/LandingPage.css
+++ b/src/pages/LandingPage/LandingPage.css
@@ -7,6 +7,10 @@
     width:45%;
 }
 
+.home-page .image-container img {
+    min-width: 30rem;
+}
+
 .home-page .heading {
     font-family: 'Lobster Two', cursive;
     font-size: 5rem;
@@ -51,6 +55,10 @@
 @media (max-width: 970px) {
     .home-page .contents {
         width: 50%;
+    }
+
+    .home-page .image-container {
+        width:fit-content;
     }
 }
 
