--- a/src/pages/LoginPage/LoginPage.css
+++ b/src/pages/LoginPage/LoginPage.css
@@ -5,13 +5,14 @@
 
 .login-page .image-container img{
     width:70%;
+    min-width: 30rem;
 }
 
 .login-page {
     margin:0 3%;
 }
 
-.form-container {
+.login .form-container {
     width:40%;
 }
 
@@ -19,6 +20,7 @@
     width: clamp(20rem, 30rem, 35rem);
     padding: 1rem;
     border-radius: var(--container-border);
+    margin: 0 auto;
 }
 
 .login-page form input {
@@ -118,4 +120,23 @@ form .input-icon-container {
 
 .icon-with-text p:hover {
     border-bottom: 1px solid;
+}
+
+@media (max-width: 900px) {
+    .login-page {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .login-page .image-container {
+        width: fit-content;
+    }
+
+    .login-page .form-container {
+        width: 100%;
+    }
+
+    .login-page form {
+        /* margin: 0 aut */
+    }
 }
