--- a/src/pages/SignUp/SignUp.css
+++ b/src/pages/SignUp/SignUp.css
@@ -9,6 +9,7 @@
     align-self: flex-start;
     position:sticky;
     width:45%;
+    min-width: 30rem;
 }
 
 .sign-up-page .form-container {
@@ -16,12 +17,32 @@
 }
 
 .sign-up-page form {
-    width: 60%;
-    margin: 2% 0;
+    width: clamp(20rem, 30rem, 35rem);
+    padding: 1rem;
+    margin: 0 auto;
+}
+
+.sign-up-page form input {
+    padding: 14px 4px;
 }
 
 @media (max-width: 1130px) {
     .image-container img {
         margin: 2% auto;
+    }
+}
+
+@media (max-width: 900px) {
+    .sign-up-page {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .sign-up-page .image-container {
+        width: fit-content;
+    }
+
+    .sign-up-page .form-container {
+        width: 100%;
     }
 }
