--- a/src/Components/NoteCard/NoteCard.css
+++ b/src/Components/NoteCard/NoteCard.css
@@ -1,7 +1,6 @@
 .note {
     width: clamp(23rem, 25rem, 28rem);
-    min-height: 22rem;
-    max-height: 26rem;
+    height: 26.5rem;
     padding: 1rem;
     border-radius: var(--container-border);
     position: relative;
@@ -11,7 +10,7 @@
 }
 
 .note .header {
-    margin-top: 4rem;
+    margin-top: 2rem;
 }
 
 .note-title {
@@ -36,6 +35,7 @@
     right:1rem;
     background-color: var(--color-white);
     color: var(--color-primary);
+    z-index: 0;
 }
 
 .note-content {
@@ -59,7 +59,6 @@
     margin: 0;
     border-radius: var(--circle-border);
     position: relative;
-    z-index: 5;
 }
 
 .note .icon-pin {
